# buttervoice

./: README.md  buona.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.changeset/: README.md
.github/workflows/: ci.yml  publish.yml  release-plan.yml  rust-post-process-gate.yml
docs/: releasing.md
scripts/: build-install.sh  release-version.mjs  sync-versions.mjs  tag-release.mjs  verify-tag-version.mjs
src/: main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/dictionaries/: en_compact.txt  tech_vocab.txt
src-tauri/resources/whispercpp/: manifest.json
src-tauri/resources/whispercpp/lib/: libggml-base.0.dylib  libggml-blas.0.dylib  libggml-cpu.0.dylib  libggml-metal.0.dylib  libggml.0.dylib  libwhisper.1.dylib
src-tauri/resources/whispercpp/macos-aarch64/: whisper-cli
src-tauri/resources/whispercpp/macos-x86_64/: whisper-cli
src-tauri/src/: app_state.rs  audio.rs  content_classification.rs  dock_macos.rs  hotkey_macos.rs  lib.rs  llm_cleanup.rs  llm_guard.rs  main.rs  models.rs  permissions_macos.rs  persona.rs  remote_speech.rs  secrets.rs  settings.rs  speech_backend.rs  text_inject_macos.rs  tray.rs  usage_stats.rs  whisper_backend.rs
src-tauri/src/post_process/: dictionary.rs  grammar_rules.rs  itn.rs  mod.rs  punctuation.rs  safety.rs  sentence.rs  spell.rs  truecase.rs
src-tauri/tests/: post_process_golden.rs  whisper_bundle.rs
src-tauri/tests/fixtures/: post_process_golden.json
src/lib/: tauri.ts  (+2 more)
(+66 files in other folders)
