[package]
name = "buttervoice"
version = "0.1.0"
description = "Tray-first local dictation app for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "buttervoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "macos-private-api",
    "image-png",
] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Audio
cpal = "0.15"
hound = "3.5"

# Network (blocking for whisper backend + model downloads)
reqwest = { version = "0.12", features = [
    "blocking",
    "multipart",
    "rustls-tls",
    "json",
], default-features = false }

# Crypto (binary integrity checks)
sha2 = "0.10"

# Keyboard simulation + clipboard (text injection)
enigo = "0.2"
arboard = "3"

# Date handling (usage stats)
chrono = "0.4"

# Post-processing pipeline
symspell = "0.4"
unicode-segmentation = "1"
regex = "1"
strsim = "0.11"

# macOS AppKit (dock control, etc.)
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[features]
custom-protocol = ["tauri/custom-protocol"]
